--- a/Carreira Front End/Missao 3/Projeto-Livraria/index.html
+++ b/Carreira Front End/Missao 3/Projeto-Livraria/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Livraria</title>
+        <meta name="description" content="A guerra entre homens e robôs que mudou drasticamente a vida na terra">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -27,8 +28,8 @@
             </p>
 
             <a
-                href="#">COMPRAR
-            </a>
+                href="https://www.amazon.com.br/Era-Artificial-tempo-sombrio-m%C3%A1quinas-ebook/dp/B07VFF5368" target="_blank">COMPRAR</a>
+
         </div>
 
         <div>
@@ -52,8 +53,7 @@
 
             <img
                 src="img/autor.jpg"
-                alt="autor"
-                width="30%">
+                alt="autor">
 
             <p>
               Diego Souza é apaixonado por tecnologia e trabalha com Desenvolvimento Web. Também é um eterno fâ de ficção cientifica e escritor nas horas vagas. Carioca da geme, ama o Rio de Janeiro.
@@ -77,8 +77,7 @@
             </p>
 
             <a
-                href="#">COMPRAR
-            </a>
+            href="https://www.amazon.com.br/Era-Artificial-tempo-sombrio-m%C3%A1quinas-ebook/dp/B07VFF5368" target="_blank">COMPRAR</a>
         </div>
 
     </body>
